# mmr-accumulator

./: .gitlab-ci.yml  LICENSE  readme.md
.github/workflows/: node.js.yml  python-package.yml
js/: package-lock.json  package.json
js/src/: mmr-accumulator.js
js/test/: mmr-accumulator.test.js
python/: pyproject.toml
python/mmr_accumulator/: __init__.py  mmr_accumulator.py
python/tests/: test_mmr_accumulator.py
test_vectors/: mmr_test_vectors.json
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: mmr-accumulator.ts
ts/test/: mmr-accumulator.test.ts
