[project]
name = "mmr-accumulator"
dynamic = ["version"]
description = "MMR Accumulator for Simplified Header Verification (SHV) clients"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "bitcoincashautist"}
]
keywords = ["bitcoin", "merkle", "mmr", "accumulator", "spv", "shv"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.dynamic]
version = {attr = "mmr_accumulator.__version__"}

[tool.setuptools.packages.find]
where = ["."]
